# pybind11_examples

classes/: CMakeLists.txt
cpp_object_attr/: CMakeLists.txt
cpp_object_attr/src/: main.cpp
function_call/: CMakeLists.txt
inheritance/: CMakeLists.txt
plugin/: CMakeLists.txt
plugin/src/: plugin_runner.cpp
